# QGIS

./: .gitignore  .travis.yml  CMakeLists.txt  boundless.cmake
.ci/travis/linux/: before_install.sh
cmake/: MacBundleMacros.cmake
doc/: CMakeLists.txt
images/: images.qrc
mac/: app.info.plist.in  browser.info.plist.in
mac/cmake/: 1qt.cmake.in
ms-windows/: python_plugins.nsh  quickpackage.sh
python/: CMakeLists.txt
python/auth/: __init__.py  keystore.sip
python/auth/keystore/: keystoremethod.sipppp  qgskeystoreutils.sip
python/console/: console.py  console_editor.py  console_output.py  console_sci.py  console_settings.py
python/core/: core.sip  core_auto.sip  qgsapplication.sip  qgsdataitem.sip  qgsproject.sip  qgssettings.sip
python/core/auth/: qgsauthcertutils.sip  qgsauthmanager.sip  qgsauthmethod.sip  qgsauthmethodconfig.sip  qgsauthmethodmetadata.sip
python/gui/: gui.sip  qgsoptionsdialogbase.sip
python/plugins/GdalTools/: GdalTools.py
python/plugins/MetaSearch/: util.py
python/plugins/db_manager/: db_manager.py  dlg_export_vector.py  dlg_import_vector.py  dlg_sql_layer_window.py  layer_preview.py
python/pyplugin_installer/: installer.py  installer_data.py
src/app/: main.cpp  qgisapp.cpp  qgisapp.h  qgisappstylesheet.cpp  qgsaddtaborgroup.cpp  qgsalignrasterdialog.cpp  qgsattributeactiondialog.cpp  qgsattributetabledialog.cpp  qgsattributetypedialog.cpp  qgsbookmarks.cpp  qgsbrowserdockwidget.cpp  qgsclipboard.cpp  qgscustomization.cpp  qgscustomization.h  qgscustomprojectiondialog.cpp  qgsdecorationcopyrightdialog.cpp  qgsdecorationgriddialog.cpp  qgsdecorationnortharrowdialog.cpp  qgsdecorationscalebar.cpp  qgsdecorationscalebardialog.cpp  qgsdelattrdialog.cpp  qgsdiagramproperties.cpp  qgsdisplayangle.cpp  qgsdxfexportdialog.cpp  qgsfeatureaction.cpp  qgsfieldcalculator.cpp  qgsfieldsproperties.cpp  qgshandlebadlayers.cpp  qgsidentifyresultsdialog.cpp  qgslabelinggui.cpp  qgslabelpropertydialog.cpp  qgslayerstylingwidget.cpp  qgsloadstylefromdbdialog.cpp  qgsmaptooladdfeature.cpp  qgsmaptoolfeatureaction.cpp  qgsmaptoolidentifyaction.cpp  qgsmaptoollabel.cpp  qgsmaptoolmeasureangle.cpp  qgsmaptoolmovefeature.cpp  qgsmaptooloffsetcurve.cpp  (+24 more)
src/app/composer/: qgsattributeselectiondialog.cpp  qgscomposer.cpp  qgscomposerarrowwidget.cpp  qgscomposerhtmlwidget.cpp  qgscomposerimageexportoptionsdialog.cpp  qgscomposermanager.cpp  qgscomposermapwidget.cpp  qgscomposerpicturewidget.cpp  qgscomposertablebackgroundcolorsdialog.cpp
src/app/dwg/: qgsdwgimportdialog.cpp
src/app/gps/: qgsgpsinformationwidget.cpp
src/app/nodetool/: qgsmaptoolnodetool.cpp  qgsselectedfeature.cpp
src/app/ogr/: qgsnewogrconnection.cpp  qgsopenvectorlayerdialog.cpp  qgsvectorlayersaveasdialog.cpp
src/app/openstreetmap/: qgsosmdownloaddialog.cpp  qgsosmexportdialog.cpp  qgsosmimportdialog.cpp
src/app/pluginmanager/: qgspluginmanager.cpp  qgspluginmanager.h
src/auth/: CMakeLists.txt
src/auth/basic/: qgsauthbasicedit.h  qgsauthbasicmethod.cpp  qgsauthbasicmethod.h
src/auth/identcert/: qgsauthidentcertedit.h  qgsauthidentcertmethod.cpp  qgsauthidentcertmethod.h
src/auth/keystore/: CMakeLists.txt  qgskeystoreedit.cpp  qgskeystoreedit.h  qgskeystoreedit.ui  qgskeystoremethod.cpp  qgskeystoremethod.h  qgskeystoreutils.cpp  qgskeystoreutils.h
src/auth/oauth2/: CMakeLists.txt  qgsauthoauth2config.cpp  qgsauthoauth2edit.cpp  qgsauthoauth2method.cpp  qgso2.h
src/auth/oauth2/cmake/: DownloadO2.cmake  External_O2.cmake
src/auth/oauth2/qjsonwrapper/: README.md
src/auth/pkipaths/: qgsauthpkipathsedit.h  qgsauthpkipathsmethod.cpp  qgsauthpkipathsmethod.h
src/auth/pkipkcs12/: qgsauthpkcs12edit.h  qgsauthpkcs12method.cpp  qgsauthpkcs12method.h
src/browser/: main.cpp  qgsbrowser.cpp
src/core/: CMakeLists.txt  qgsactionmanager.cpp  qgsapplication.cpp  qgsapplication.h  qgsbrowsermodel.cpp  qgscolorscheme.cpp  qgscoordinatereferencesystem.cpp  qgsdataitem.cpp  qgsdataitem.h  qgsexpressioncontext.cpp  qgsfield.cpp  qgsgeometryvalidator.cpp  qgsgml.cpp  qgsgmlschema.cpp  qgshttptransaction.cpp  qgshttptransaction.h  qgsmaplayer.cpp  qgsmaplayerlegend.cpp  qgsmaprenderer.cpp  qgsmaprendererjob.cpp  qgsmimedatautils.cpp  qgsnetworkaccessmanager.cpp  qgsowsconnection.cpp  qgsproject.cpp  qgsproject.h  qgsprojectproperty.cpp  qgsruntimeprofiler.cpp  qgssettings.cpp  qgssettings.h  qgstolerance.cpp  qgsvectordataprovider.cpp  qgsvectorfilewriter.cpp  qgsvectorlayer.cpp  qgsvectorlayerrenderer.cpp
src/core/auth/: qgsauthcertutils.cpp  qgsauthcertutils.h  qgsauthconfig.cpp  qgsauthcrl.cpp  qgsauthcrl.h  qgsauthmanager.cpp  qgsauthmanager.h  qgsauthmethod.h  qgsauthmethodconfig.cpp  qgsauthmethodconfig.h  qgsauthmethodmetadata.cpp  qgsauthmethodmetadata.h  qgsauthmethodregistry.cpp  qgsauthmethodregistry.h
src/gui/: CMakeLists.txt  qgisgui.cpp  qgsadvanceddigitizingdockwidget.cpp  qgsattributedialog.cpp  qgsattributeform.cpp  qgsblendmodecombobox.cpp  qgsbrowsertreeview.cpp  qgscodeeditor.cpp  qgscollapsiblegroupbox.cpp  qgscollapsiblegroupbox.h  qgscolorbutton.cpp  qgscolorbuttonv2.cpp  qgscolordialog.cpp  qgscolorschemelist.cpp  qgscolorwidgets.cpp  qgscomposerview.cpp  qgscompoundcolorwidget.cpp  qgsconfigureshortcutsdialog.cpp  qgscredentialdialog.cpp  qgsdatumtransformdialog.cpp  qgsencodingfiledialog.cpp  qgserrordialog.cpp  qgsexpressionbuilderdialog.cpp  qgsexpressionbuilderwidget.cpp  qgsexpressionselectiondialog.cpp  qgsexternalresourcewidget.cpp  qgsfieldvalidator.cpp  qgsfieldvalidator.h  qgsfilewidget.cpp  qgsformannotationitem.cpp  qgsgenericprojectionselector.cpp  qgshelp.cpp  qgshistogramwidget.cpp  qgshtmlannotationitem.cpp  qgsidentifymenu.cpp  qgsmanageconnectionsdialog.cpp  qgsmapcanvas.cpp  qgsmapcanvassnapper.cpp  qgsmapcanvastracer.cpp  qgsmaplayerstylemanagerwidget.cpp  (+29 more)
src/helpviewer/: main.cpp  qgshelpviewer.cpp
src/plugins/: CMakeLists.txt
src/plugins/nam_keystore_adapter/: CMakeLists.txt  sslerrorsadapter.cpp  sslerrorsadapter.h
src/ui/: qgisapp.ui  qgsoptionsbase.ui
tests/bench/: qgsbench.cpp
tests/src/: CMakeLists.txt
(+264 files in other folders)
